WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72203
r99744
causes crash in Chromium's dom_perf test
https://bugs.webkit.org/show_bug.cgi?id=72203
Summary
r99744 causes crash in Chromium's dom_perf test
Ojan Vafai
Reported
2011-11-11 20:06:11 PST
Stack below. I'm going to rollback
http://trac.webkit.org/changeset/99744
for now since we're losing valuable performance testing coverage. I'll try and make a reduced testcase afterwards. Julien, if you want to reproduce it before I get to that, you just have to load src/data/dom_perf/run.html from a chromium checkout and it crashes. ASSERTION FAILED: m_row != unsetRowIndex /WebKit/Source/WebCore/rendering/RenderTableCell.h(76) : unsigned int WebCore::RenderTableCell::row() const 1 0x10353a2de WebCore::RenderTableCell::row() const 2 0x10353cf5d WebCore::RenderTableCell::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) 3 0x1034bd51e WebCore::RenderObject::setStyle(WTF::PassRefPtr<WebCore::RenderStyle>) 4 0x1034bafa4 WebCore::RenderObject::setAnimatableStyle(WTF::PassRefPtr<WebCore::RenderStyle>) 5 0x103332dc5 WebCore::Node::setRenderStyle(WTF::PassRefPtr<WebCore::RenderStyle>) 6 0x102c228d2 WebCore::Element::recalcStyle(WebCore::Node::StyleChange) 7 0x102c22c57 WebCore::Element::recalcStyle(WebCore::Node::StyleChange) 8 0x102c22c57 WebCore::Element::recalcStyle(WebCore::Node::StyleChange) 9 0x102c22c57 WebCore::Element::recalcStyle(WebCore::Node::StyleChange) 10 0x102c22c57 WebCore::Element::recalcStyle(WebCore::Node::StyleChange) 11 0x102c22c57 WebCore::Element::recalcStyle(WebCore::Node::StyleChange) 12 0x102adadac WebCore::Document::recalcStyle(WebCore::Node::StyleChange) 13 0x102adc0ba WebCore::Document::updateStyleIfNeeded() 14 0x102ada7f8 WebCore::Document::implicitClose() 15 0x102cb0127 WebCore::FrameLoader::checkCallImplicitClose() 16 0x102cb39f2 WebCore::FrameLoader::checkCompleted() 17 0x102cb426e WebCore::FrameLoader::finishedParsing() 18 0x102adc2d8 WebCore::Document::finishedParsing() 19 0x102dedc8a WebCore::HTMLTreeBuilder::finished() 20 0x102d717d0 WebCore::HTMLDocumentParser::end() 21 0x102d718c5 WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd() 22 0x102d733d1 WebCore::HTMLDocumentParser::prepareToStopParsing() 23 0x102d7144f WebCore::HTMLDocumentParser::endIfDelayed() 24 0x102d72b6a WebCore::HTMLDocumentParser::resumeParsingAfterYield() 25 0x102dc6d0e WebCore::HTMLParserScheduler::continueNextChunkTimerFired(WebCore::Timer<WebCore::HTMLParserScheduler>*) 26 0x102dc6f87 WebCore::Timer<WebCore::HTMLParserScheduler>::fired() 27 0x103780aa6 WebCore::ThreadTimers::sharedTimerFiredInternal() 28 0x103780cc1 WebCore::ThreadTimers::sharedTimerFired() 29 0x10361cb2e WebCore::timerFired(__CFRunLoopTimer*, void*) 30 0x7fff80050bb8 __CFRunLoopRun 31 0x7fff8004ed8f CFRunLoopRunSpecific
Attachments
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2011-11-11 20:07:56 PST
Unfortunately, I don't have access to
https://bugs.webkit.org/show_bug.cgi?id=70171
to reopen it. Julien can you take care of that?
Ojan Vafai
Comment 2
2011-11-11 20:40:39 PST
Committed
r100067
: <
http://trac.webkit.org/changeset/100067
>
Julien Chaffraix
Comment 3
2011-11-11 21:26:53 PST
(In reply to
comment #1
)
> Unfortunately, I don't have access to
https://bugs.webkit.org/show_bug.cgi?id=70171
to reopen it. Julien can you take care of that?
Sure, I think the ASSERT was corrected by
http://trac.webkit.org/changeset/100051
and thus the rollout was unneeded but I could be wrong. I will investigate on Monday (and roll it out if safe).
Ojan Vafai
Comment 4
2011-11-11 22:18:28 PST
Oh maybe. Sorry if this was unnecessary. I tried it at close to tip of tree and it failed, but I might not have been as far as
r100051
.
Ojan Vafai
Comment 5
2011-11-14 15:42:43 PST
Ok, I ran src/data/dom_perf/run.html on tip of tree and it seems to work. So, I think
r100051
must have fixed the bug. Julien, you want to roll the patch back in or have me do it?
Ojan Vafai
Comment 6
2011-11-14 15:43:16 PST
Actually, since I don't have access to
bug 70171
, Julien, you mind recommitting this?
Julien Chaffraix
Comment 7
2011-11-14 15:51:34 PST
(In reply to
comment #6
)
> Actually, since I don't have access to
bug 70171
, Julien, you mind recommitting this?
Sorry for not keeping you in the loop, I recommitted the patch today ->
http://trac.webkit.org/changeset/100183
. I notified the gardener about the potential breakage and watched the perf integration bots. They just passed dom_perf if I am not mistaking \o/.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug