Source/WebCore: Unreviewed. Rollout http://trac.webkit.org/changeset/99744. https://bugs.webkit.org/show_bug.cgi?id=72203 r99744 causes crash in Chromium's dom_perf test.

* rendering/RenderTable.cpp:
(WebCore::RenderTable::splitColumn):
(WebCore::RenderTable::appendColumn):
* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::addCell):
(WebCore::RenderTableSection::recalcCells):
(WebCore::RenderTableSection::appendColumn):

LayoutTests: Unreviewed. Rollout http://trac.webkit.org/changeset/99744.
https://bugs.webkit.org/show_bug.cgi?id=72203
r99744 causes crash in Chromium's dom_perf test.

* fast/table/crash-splitColumn-2-expected.txt: Removed.
* fast/table/crash-splitColumn-2.html: Removed.
* fast/table/crash-splitColumn-3-expected.txt: Removed.
* fast/table/crash-splitColumn-3.html: Removed.
* fast/table/crash-splitColumn-expected.txt: Removed.
* fast/table/crash-splitColumn.html: Removed.

Canonical link: https://commits.webkit.org/88624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100067 268f45cc-cd09-0410-ab3c-d52691b4dbfc